# peconvert

./: README.md  pyproject.toml
src/peconvert/: __init__.py  image_types.py  main.py
src/peconvert/convertions/: bigrams.py  byteclass.py  byteclass_hilbert.py  ember.py  entropy.py  grayscale.py  helper.py  hit.py  spiral.py
