[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peconvert"
version = "0.1.0"
description = "windows portable executable to image"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
    "numpy>=2.4.6",
    "matplotlib>=3.10.9"
]
author = [{name = "Vasileios Millios"}]

[tool.setuptools.packages.find]
where = ["src"]
